syntax = "proto3";

package average;

message AverageRequest{
	int32 num = 1;
}

message AverageResponse{
	double result = 1;
}

service AverageService {

	rpc ComputeAverage(stream AverageRequest) returns (AverageResponse) {}
}